--- a/LaMiaPizzeria/Views/Shared/_Footer.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="background_color_orange d-flex flex-wrap justify-content-between align-items-center py-3 my-4 mx-2 border-top">
-    <p class="col-md-4 mb-0 text-body-secondary">© 2023 Dario, Inc</p>
+    <p class="col-md-4 mb-0 text-body-secondary">© 2023 Pizzeria, Inc</p>
     <!-- /www.flaticon.com/ -->
     <a href="@Url.Action("Index", "Home")" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <img src="https://cdn-icons-png.flaticon.com/512/1404/1404945.png"
