Commit migrations database

--- a/LaMiaPizzeria/Views/Home/Privacy1.cshtml
+++ b/LaMiaPizzeria/Views/Home/Privacy1.cshtml
@@ -1,3 +1,7 @@
-﻿<h1>Privacy</h1>
+﻿@{
+    Layout = "_MioLayout";
+}
+
+<h1>Privacy</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
