--- a/LaMiaPizzeria/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Header.cshtml
@@ -20,6 +20,8 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Home")">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "PizzaModel")">AggiungiPizza</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Contacts", "Home")">Contatti</a>
