--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -37,37 +37,22 @@
                     <tr style="color: darkorange; font-weight: bold">
                         <th class="border border-3" scope="row">@pizza.NomePizza</th>
                         <td class="border border-3">@pizza.Descrizione</td>
-                        <td class="border  border-3"><a href="@Url.Action("SingolaPizza", "Home", new { id = pizza.Id })"><img class="img-fluid img_square" src="@pizza.Immagine" alt="@pizza.NomePizza"></a></td>
+                        <td class="border  border-3"><a href="@Url.Action("SingolaPizza", "Home", new { id = pizza.Id })"><img class="img-fluid img_square" height="200" width="150" src="@pizza.Immagine" alt="@pizza.NomePizza"></a></td>
                         <td class="border border-3">@pizza.Prezzo €</td>
-                    </tr>
+                            <td><a class="btn btn-info btn-sm" href="@Url.Action("SingolaPizza", "Home", new { id = pizza.Id })">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                            </a>
+                            <a class="btn btn-warning btn-sm mt-2" href="@Url.Action("modificaPizza", "Pizza", new {id = pizza.Id})">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polygon points="14 2 18 6 7 17 3 17 3 13 14 2"></polygon><line x1="3" y1="22" x2="21" y2="22"></line></svg>
+                            </a>
+                            <form asp-controller="Pizza" asp-action="eliminaPizza" asp-route-id="@pizza.Id" method="post">
+                                @Html.AntiForgeryToken()
+                                <button type="submit" class="btn btn-danger btn-sm mt-2">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                                </button>  </form>     </td>
+                                 </tr>
                 }
                                            
-
-@*
-                        <tr style="color: darkgreen; font-weight: bold">
-                            <th class="border border-3" scope="row">Marinara</th>
-                            <td class="border border-3">Pomodoro, Aglio, Origano e Olio</td>
-                            <td class="border border-3"><img class="img-fluid img_square" src="~/img/marinara.png" alt="Immagine logo Bing"></td>
-                            <td class="border border-3"> 5.50 €</td>
-                        </tr>
-
-                        <tr style="color: darkorange; font-weight: bold">
-                            <th class="border border-3" scope="row">Capricciosa</th>
-                            <td class ="border border-3">Pomodoro, Mozzarella, Funghi, Prosciutto Cotto e Carciofini</td>
-                            <td class="border border-3"><img class="img-fluid img_square" src="~/img/capricciosa.png" alt="Immagine logo Bing"></td>
-                            <td class="border border-3"> 7.00 €</td>
-                        </tr>
-
-                        <tr style="color: darkgreen; font-weight: bold">
-                            <th class="border border-3" scope="row">Diavola</th>
-                            <td class="border border-3">Fior di latte, Spianata piccante, Pomodoro, Basilico, Olio e Peperoncino</td>
-                            <td class="border border-3"><img class="img-fluid img_square" src="~/img/diavola.png" alt="Immagine logo Bing"></td>
-                            <td class="border border-3"> 6.50 €</td>
-                        </tr>
-
-
-*@
-
 
 
                         </tbody>
