--- a/LaMiaPizzeria/Views/Home/SingolaPizza.cshtml
+++ b/LaMiaPizzeria/Views/Home/SingolaPizza.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-12">
             <h3 class="upper-headers text-center mt-4">Pizza: @pizza.NomePizza</h3>
-            <img src="@pizza.Immagine" alt="@pizza.NomePizza" class="d-block m-auto border border-black" />
+            <img heigth="200" width="150" src="@pizza.Immagine" alt="@pizza.NomePizza" class="d-block m-auto border border-black" />
             <p class="text-center mt-3 site-font">@pizza.Descrizione</p>
         </div>
     </div>
