--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -2,10 +2,14 @@
                       
 @foreach(PizzaModel pizza in Model)
                         {
+
+                            <tbody>
 <tr style="color: darkorange; font-weight: bold">
     <th class="border border-3" scope="row">@pizza.NomePizza</th>
     <td class="border border-3">@pizza.Descrizione</td>
-    <td class="border border-3"><img class="img-fluid img_square" src="@pizza.Immagine" alt="@pizza.NomePizza"></td>
+            <td class="border border-3"><img class="img-fluid img_square" height="200" width="150" src="@pizza.Immagine" alt="@pizza.NomePizza"></td>
     <td class="border border-3">@pizza.Prezzo €</td>
 </tr>
+    </tbody>
+
 }
