--- a/LaMiaPizzeria/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Header.cshtml
@@ -21,7 +21,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Home")">Home</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "PizzaModel")">AggiungiPizza</a>
+                    <a class="nav-link" href="@Url.Action("Creazione", "Pizza")">AggiungiPizza</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Contacts", "Home")">Contatti</a>
