--- a/LaMiaPizzeria/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Header.cshtml
@@ -29,6 +29,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Privacy", "Home")">Privacy</a>
                 </li>
+                <partial name="_LoginPartial" />
             </ul>
         </div>
     </div>
