Category Id name

--- a/LaMiaPizzeria/Views/Home/Contacts.cshtml
+++ b/LaMiaPizzeria/Views/Home/Contacts.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="container contact">
+﻿<div class="container contact text-white">
     <div class="row">
         <div class="col-md-3 bg-warning">
             <div class="contact-info">
