--- a/LaMiaPizzeria/Views/Pizza/modificaPizza.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/modificaPizza.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PizzaModel
 
 
-<div class="container">
+<div class="container text-white">
     <h2 class="mb-3">Modifica Pizza''</h2>
     <form asp-controller="Pizza" asp-action="modificaPizza" asp-route-id="@Model.Id" method="post">
         @Html.AntiForgeryToken()
